# Video-Player_Beatsaber

./: README.md
VideoPlayer_mod_source/VideoPlayer/: CMakeLists.txt  README.md  build.sh  qpm.json
VideoPlayer_mod_source/VideoPlayer/BMBF/: VideoPlayerConfig.json  mod.json
VideoPlayer_mod_source/VideoPlayer/include/: SettingsViewController.hpp  VideoPlayerConfig.hpp  VideoPlayerController.hpp  assets.hpp  main.hpp  settings.bsml  settings_bsml.inc
VideoPlayer_mod_source/VideoPlayer/src/: SettingsViewController.cpp  VideoPlayerController.cpp  main.cpp
